# iris_shader_language

./: .gitignore  CMakeLists.txt  package-lock.json  package.json  tsconfig.json
cpp/: iris_grammar.g4
cpp/antlr4_grammar/: iris_grammar.interp  iris_grammar.tokens  iris_grammarBaseVisitor.cpp  iris_grammarBaseVisitor.h  iris_grammarLexer.cpp  iris_grammarLexer.h  iris_grammarLexer.interp  iris_grammarLexer.tokens  iris_grammarParser.cpp  iris_grammarParser.h  iris_grammarVisitor.cpp  iris_grammarVisitor.h
cpp/include/: ast_node.h  compile.h  constants.h  error_listener.h  errors.h  tokenizer.h  tokenizer_constants.h  type_compilation.h  virtual_module_group.h
cpp/include/tree/: _type.h  binary_operator.h  braces.h  call.h  cast.h  class_definition.h  declaration.h  descriptor.h  expression.h  for_loop.h  function_definition.h  getter.h  import.h  index_operator.h  language_node.h  memory_stack.h  module.h  primitive.h  return.h  statement.h  ternary.h  type_cast.h  unary_operator.h  unpacking_list.h  virtual_module_group.h  while_loop.h
cpp/source/: compile.cpp  core.cpp  error_listener.cpp  errors.cpp  tokenizer.cpp  virtual_module_group.cpp
cpp/source/tree/: _type.cpp  binary_operator.cpp  braces.cpp  call.cpp  cast.cpp  class_definition.cpp  declaration.cpp  descriptor.cpp  expression.cpp  for_loop.cpp  function_definition.cpp  getter.cpp  (+14 more)
cpp/tools/: generate_tokenizer.py
examples/webgl2/: package-lock.json  package.json  tsconfig.json  webpack.config.js
iris_std_lib/types/: integer.ir
ts/: core.ts  index.ts  interfaces.ts  wasm.d.ts  wasm.js
(+3 files in other folders)
